# subboard-mng-gui

./: Cargo.toml  config_temp.toml  readme.md
.github/workflows/: build.yml  check.yml
src/: main.rs
